Fixed international & local layout on mobile view.

--- a/app/assets/stylesheets/domain.scss
+++ b/app/assets/stylesheets/domain.scss
@@ -106,12 +106,11 @@
     @extend .col-md-8;
     color: #47A2D6;
 
-    > div.contact-cat, >div:nth-child(3) {
+    > div.contact-cat, > div:nth-child(3) {
       @extend .text-muted;
       @extend .small;
       @extend .row;
       @extend .visible-xs;
-
     }
 
     >div:nth-child(2){ /*international*/
@@ -119,6 +118,11 @@
       @extend .col-xs-12;
       @extend .col-md-7;
       @extend .row;
+
+      select {
+        @extend .col-lg-7;
+        @extend .col-md-7;
+      }
     }
 
    div:last-child { /*local*/
@@ -126,6 +130,10 @@
       @extend .col-xs-12;
       @extend .col-md-5;
       @extend .row;
+      select {
+        @extend .col-lg-10;
+        @extend .col-md-10;
+      }
     }
 
   }
@@ -321,6 +329,11 @@ border: none;
 }
 
 @media (max-width: 530px) {
+  #domain-info > div > div.inputfield > div.contact-cat{
+    margin-left: 0px;
+    margin-left: 0px;
+    clear: left;
+  }
   #create-dom-host {
     input[type="text"] {
       width: 100%;
